[gd_scene load_steps=5 format=3 uid="uid://bulvgyvpre3qr"]

[ext_resource type="Script" path="res://Scripts/Buttons.gd" id="1"]
[ext_resource type="Theme" uid="uid://b7mjswntukbu2" path="res://Themes/black_and_white_theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://co4qjeoiase5d" path="res://Textures/Blocks/dirt.png" id="14"]
[ext_resource type="Script" path="res://Scripts/SettingsVideo.gd" id="23"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsVideo" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 712.0
script = ExtResource("23")

[node name="TextureRect" type="TextureRect" parent="SettingsVideo"]
layout_mode = 0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 736.0
texture = ExtResource("14")
stretch_mode = 1

[node name="Back" type="Button" parent="SettingsVideo"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 37.0
script = ExtResource("1")

[node name="Label" type="Label" parent="SettingsVideo/Back"]
texture_filter = 1
layout_mode = 0
offset_top = -1.0
offset_right = 60.0
offset_bottom = 14.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_back"
clip_text = true

[node name="Line2D" type="Line2D" parent="SettingsVideo"]
points = PackedVector2Array(384, 88, 896, 88)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Label_FOV" type="Label" parent="SettingsVideo"]
texture_filter = 1
layout_mode = 0
offset_left = 321.0
offset_top = 228.0
offset_right = 608.0
offset_bottom = 239.0
scale = Vector2(2, 2)
theme = ExtResource("2")
text = "menu_video_fov"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsVideo/Label_FOV"]
layout_mode = 0
offset_top = 10.0
offset_right = 640.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("2")
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.5

[node name="MinVal" type="Label" parent="SettingsVideo/Label_FOV"]
texture_filter = 1
layout_mode = 0
offset_left = -24.5
offset_top = 15.0
offset_right = 15.5
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "0.1"

[node name="MaxVal" type="Label" parent="SettingsVideo/Label_FOV"]
texture_filter = 1
layout_mode = 0
offset_left = 324.0
offset_top = 15.0
offset_right = 364.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "2"

[node name="Val" type="Label" parent="SettingsVideo/Label_FOV"]
texture_filter = 1
layout_mode = 0
offset_left = -160.0
offset_top = 22.0
offset_right = 481.0
offset_bottom = 33.0
theme = ExtResource("2")
text = "1.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox_particules" type="CheckBox" parent="SettingsVideo"]
layout_mode = 0
offset_left = 321.0
offset_top = 296.0
offset_right = 777.0
offset_bottom = 336.0
scale = Vector2(1.4, 1.4)
focus_mode = 0
theme = ExtResource("2")
text = "menu_video_particles"
icon_alignment = 1

[node name="CheckBox_shadows" type="CheckBox" parent="SettingsVideo"]
layout_mode = 0
offset_left = 321.0
offset_top = 361.0
offset_right = 777.0
offset_bottom = 401.0
scale = Vector2(1.4, 1.4)
focus_mode = 0
theme = ExtResource("2")
text = "menu_video_shadows"
icon_alignment = 1

[node name="CheckBox_fullscreen" type="CheckBox" parent="SettingsVideo"]
layout_mode = 0
offset_left = 321.0
offset_top = 425.0
offset_right = 778.0
offset_bottom = 465.0
scale = Vector2(1.4, 1.4)
focus_mode = 0
theme = ExtResource("2")
text = "menu_video_fullscreen"
icon_alignment = 1

[node name="Label_Resolution" type="Label" parent="SettingsVideo"]
texture_filter = 1
layout_mode = 0
offset_left = 320.0
offset_top = 512.0
offset_right = 820.0
offset_bottom = 523.0
scale = Vector2(2, 2)
theme = ExtResource("2")
text = "menu_video_resolution"

[node name="ChangeResolutions" type="OptionButton" parent="SettingsVideo/Label_Resolution"]
layout_mode = 0
offset_left = 10.0
offset_top = 15.0
offset_right = 324.0
offset_bottom = 29.5
focus_mode = 0
theme = ExtResource("2")

[node name="Title" type="Label" parent="SettingsVideo"]
texture_filter = 1
layout_mode = 0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 43.0
scale = Vector2(4, 4)
theme_override_constants/shadow_offset_y = 1
text = "menu_video"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Effects" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[connection signal="mouse_entered" from="SettingsVideo/Back" to="SettingsVideo/Back" method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="SettingsVideo/Back" to="SettingsVideo/Back" method="_on_Back_mouse_exited"]
[connection signal="pressed" from="SettingsVideo/Back" to="SettingsVideo" method="_on_Back_pressed"]
[connection signal="pressed" from="SettingsVideo/CheckBox_fullscreen" to="SettingsVideo" method="_on_CheckBox_fullscreen_pressed"]
[connection signal="item_selected" from="SettingsVideo/Label_Resolution/ChangeResolutions" to="SettingsVideo" method="_on_ChangeResolutions_item_selected"]
